# pirpy

./: .gitignore  README.rst  pipeline_proposes.txt  psf_propose.txt  setup.cfg  setup.py
pirpy/: __init__.py  log.py  mp.py
pirpy/astrometry/: wcscalib.py
pirpy/ccd/: __init__.py  ccddata.py  ccdmath.py  lacosmic.py
pirpy/image_logger/: __init__.py
pirpy/imreducer/: __init__.py  imreducer.py  lacosmic.py  match_headers.py
pirpy/io/: __init__.py  file_organizer.py  filenames.py  imdata.py  io.py  io_tool.py  mkdir_p.py
pirpy/math/: __init__.py  array_math.py  ccd_type.py  ccdproc_wrapper.py  gaussian.py  imartih.py  list_tools.py  mag_tools.py  profile_fitting.py  stats.py
pirpy/photometry/: __init__.py  allowed_algorithms.py  catalog_loader.py  find.py  magnitudes_math_kernel.pyx  object_catalog.py  photobject.py  photometry.py  photutils_photometry.py  pos_cat.py  psf_fitting.py  psf_kernels.pyx  sep_photometry.py  wcs_photometer.py  xy_photometer.py
pirpy/pre_reduction/: __init__.py  imreducer.py  lacosmic.py
pirpy/tests/: coveragerc  test_example.py
pirpy/wcscalib/: __init__.py  wcscalib.py
test/: Tests.ipynb
