[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = pirpy
description = Pipeline for Image Reduction in Python
long_description = Ease astronomical image reduction and photometry tools.
author = Julio Campagnolo
author_email = juliocampagnolo@gmail.com
license = BSD
edit_on_github = False
github_project = juliotux/pirpy
